sumo/tests/netgen/grid/errors/grid_number__zero/errors.netgen
Error: The number of edges must be larger than 2 in both directions.
Quitting (on error).
